added download attribute to link

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,7 +16,7 @@
           <div class="card-body">
             <p class="card-title">File name: tiktok song.mp3</p>
             <p class="card-text">File size: 5 mb</p>
-            <a href="/download-test-file" class="btn btn-primary">Download</a>
+            <a download="/download-test-file" href="/download-test-file" class="btn btn-primary">Download</a>
           </div>
         </div>
       </div>
