--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,6 +17,7 @@
             <p class="card-title">File name: tiktok song.mp3</p>
             <p class="card-text">File size: 5 mb</p>
             <a download="/download-test-file" href="/download-test-file" class="btn btn-primary">Download</a>
+            <a href="/writeToHome" class="btn btn-primary">Write to home</a>
           </div>
         </div>
       </div>
