read file from home added

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,21 @@
             <p class="card-title">File name: tiktok song.mp3</p>
             <p class="card-text">File size: 5 mb</p>
             <a download="/download-test-file" href="/download-test-file" class="btn btn-primary">Download</a>
+          </div>
+
+          <div class="card-body">
             <a href="/writeToHome" class="btn btn-primary">Write to home</a>
+            <a href="/readHomeFile" class="btn btn-primary">Read home file</a>
+          </div>
+        </div>
+
+        <div class="card col-4">
+          <div class="card-header">
+            Read/Write home dir
+          </div>
+          <div class="card-body">
+            <a href="/writeToHome" class="btn btn-primary">Write to home</a>
+            <a href="/readHomeFile" class="btn btn-primary">Read home file</a>
           </div>
         </div>
       </div>
