read/write temp, app dir

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -34,6 +34,26 @@
             <a href="/readHomeFile" class="btn btn-primary">Read home file</a>
           </div>
         </div>
+
+        <div class="card col-4">
+          <div class="card-header">
+            Read/Write Temp dir
+          </div>
+          <div class="card-body">
+            <a href="/writeToTemp" class="btn btn-primary">Write to home</a>
+            <a href="/readTempFile" class="btn btn-primary">Read home file</a>
+          </div>
+        </div>
+
+        <div class="card col-4">
+          <div class="card-header">
+            Read/Write App dir
+          </div>
+          <div class="card-body">
+            <a href="/writeToAppDir" class="btn btn-primary">Write to home</a>
+            <a href="/readAppDirFile" class="btn btn-primary">Read home file</a>
+          </div>
+        </div>
       </div>
     </div>
 
